src/test/ui/async-await/issue-74256.stderr
error[E0623]: lifetime mismatch
  --> $DIR/issue-74256.rs:7:9
   |
LL |     async fn async_fn(self: &Struct, f: &u32) -> &u32 {
   |                                         ----     ----
   |                                         |        |
   |                                         |        this `async fn` implicitly returns an `impl Future<Output = &u32>`
   |                                         this parameter and the returned future are declared with different lifetimes...
LL |         f
   |         ^ ...but data from `f` is held across an await point here

error[E0623]: lifetime mismatch
  --> $DIR/issue-74256.rs:11:9
   |
LL |     fn sync_fn(self: &Struct, f: &u32) -> &u32 {
   |                                  ----     ----
   |                                  |
   |                                  this parameter and the return type are declared with different lifetimes...
LL |         f
   |         ^ ...but data from `f` is returned here

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0623`.
